--- a/app/views/artists/new.html.erb
+++ b/app/views/artists/new.html.erb
@@ -1,8 +1,12 @@
 <h1>Artist Sign Up</h1>
 <%= form_for @artist do |f| %>
   <p>
-    <%= f.label :username %>
-    <%= f.text_field :username %>
+    <%= f.label :name %>
+    <%= f.text_field :name %>
+  </p>
+  <p>
+    <%= f.label :email %>
+    <%= f.text_field :email %>
   </p>
   <p>
     <%= f.label :password %>
