--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -2,6 +2,10 @@
 
 <h1>Listing Artists</h1>
 
+<% if current_artist %>
+<h1> Welcome to FanLuv! </h1>
+<% end %>
+
 <table>
   <thead>
     <tr>
@@ -11,15 +15,13 @@
 
   <tbody>
     <% @artists.each do |artist| %>
+      <tr><td><%= artist.name %></td></tr>
       <tr>
         <td><%= link_to 'Show', artist %></td>
-        <td><%= link_to 'Edit', edit_artists_path(artist) %></td>
-        <td><%= link_to 'Destroy', artist, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
     <% end %>
   </tbody>
 </table>
 
 <br>
 
-<%= link_to 'New Artist', new_artists_path %>
+<%= link_to 'New Artist', new_artist_path %>
