--- a/app/views/fans/index.html.erb
+++ b/app/views/fans/index.html.erb
@@ -2,6 +2,10 @@
 
 <h1>Listing Fans</h1>
 
+<% if current_fan %>
+<h1> Welcome to FanLuv! </h1>
+<% end %>
+
 <table>
   <thead>
     <tr>
@@ -11,15 +15,13 @@
 
   <tbody>
     <% @fans.each do |fan| %>
+      <tr><td><%=fan.name%></td></tr>
       <tr>
         <td><%= link_to 'Show', fan %></td>
-        <td><%= link_to 'Edit', edit_fans_path(fan) %></td>
-        <td><%= link_to 'Destroy', fan, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
     <% end %>
   </tbody>
 </table>
 
 <br>
 
-<%= link_to 'New Fan', new_fans_path %>
+<%= link_to 'New Fan', new_fan_path %>
