--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -1,4 +1,18 @@
 <p id="notice"><%= notice %></p>
 
-<%= link_to 'Edit', edit_artists_path(@artist) %> |
+<p>
+  <strong>Name:</strong>
+  <%= @artist.name %>
+</p>
+
+<p>
+  <strong>Email:</strong>
+  <%= @artist.email %>
+</p>
+
+<% if current_artist == @artist %>
+<td><%= link_to 'Edit', edit_artist_path(@artist) %></td>
+<td><%= link_to 'Destroy', @artist, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+<% end %>
+
 <%= link_to 'Back', artists_path %>
