--- a/app/views/fans/edit.html.erb
+++ b/app/views/fans/edit.html.erb
@@ -1,6 +1,25 @@
 <h1>Editing Fan</h1>
 
-<%= render 'form' %>
+<%= form_for @fan do |f| %>
+  <p>
+    <%= f.label :name %>
+    <%= f.text_field :name %>
+  </p>
+  <p>
+    <%= f.label :email %>
+    <%= f.text_field :email %>
+  </p>
+  <p>
+    <%= f.label :password %>
+    <%= f.password_field :password %>
+  </p>
+  <p>
+    <%= f.label :password_confirmation %>
+    <%= f.password_field :password_confirmation %>
+  </p>
+  <p>
+    <%= f.submit %>
+  </p>
+<% end %>
 
-<%= link_to 'Show', @fan %> |
 <%= link_to 'Back', fans_path %>
