copied over assets

--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -1,18 +1,142 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Name:</strong>
-  <%= @artist.name %>
-</p>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-xs-12 col-md-6">
+      <img class="img-responsive" src="http://placehold.it/1000x1000">
+    </div>
+    <div class="col-xs-12 col-md-6">
+      <div class="artist-title"><%= @artist.name %></div>
+      <p class="artist-detail">Brunch portland sartorial artisan typewriter. Sustainable cliche ennui ethical. Messenger bag artisan literally gastropub. Fingerstache leggings food truck gastropub pork belly pour-over williamsburg chicharrones authentic. Poutine cornhole affogato, before they sold out umami pabst yuccie ugh cronut selvage. Flexitarian before they sold out chambray locavore tattooed trust fund kogi. 8-bit letterpress retro heirloom chartreuse taxidermy.</p>
 
-<p>
-  <strong>Email:</strong>
-  <%= @artist.email %>
-</p>
 
-<% if current_artist == @artist %>
-<td><%= link_to 'Edit', edit_artist_path(@artist) %></td>
-<td><%= link_to 'Destroy', @artist, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-<% end %>
+      <%= link_to image_tag("http://linkmaker.itunes.apple.com/images/badges/en-us/badge_music-lrg.svg"), ItunesSearchController.search(@artist.name), alt: 'Search artist on Apple Music', margin: 0 %>
+
+
+
+      <p>
+				<% if current_artist == @artist %>
+				<td><%= link_to 'Edit', edit_artist_path(@artist) %></td>
+				<td><%= link_to 'Delete', @artist, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+				<% end %>
+
+    </div>
+  </div>
+</div>
+
+<div class="container-full" style="background-color:#5AADFF;margin-top:1em;">
+  <div class="row">
+    <h2 style="text-align:center;color:white;line-height:100px;">ALBUMS</h2>
+  </div>
+</div>
+
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-xs-12 col-md-12">
+
+        <div class="col-xs-6 col-md-3" style="padding-top:1em">
+          <img class="img-responsive" src="http://placehold.it/1000x1000">
+        </div>
+        <div class="col-xs-6 col-md-3" style="padding-top:1em">
+          <img class="img-responsive" src="http://placehold.it/1000x1000">
+        </div>
+        <div class="col-xs-6 col-md-3" style="padding-top:1em">
+          <img class="img-responsive" src="http://placehold.it/1000x1000">
+        </div>
+        <div class="col-xs-6 col-md-3" style="padding-top:1em">
+          <img class="img-responsive" src="http://placehold.it/1000x1000">
+        </div>
+
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-xs-12 col-md-12">
+      <p class="btn-more" href="#">MORE</p>
+    </div>
+  </div>
+</div>
+
+
+<div class="container-full" style="background-color:#5AADFF;margin-top:1em;">
+  <div class="row">
+    <h2 style="text-align:center;color:white;line-height:100px;">TOUR DATES</h2>
+  </div>
+</div>
+
+
+<div class="container-full" style="background-color:#5AADFF;margin-top:1em;">
+  <div class="row">
+    <h2 style="text-align:center;color:white;line-height:100px;">PRESS</h2>
+  </div>
+</div>
+
+
+<div class="container-full" style="background-color:#5AADFF;margin-top:1em;">
+  <div class="row">
+    <h2 style="text-align:center;color:white;line-height:100px;">FANS</h2>
+  </div>
+</div>
+
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-xs-12 col-md-12">
+
+      <div class="col-xs-3 col-md-2" style="padding-top:1em">
+        <img class="img-responsive" src="http://placehold.it/1000x1000">
+      </div>
+      <div class="col-xs-3 col-md-2" style="padding-top:1em">
+        <img class="img-responsive" src="http://placehold.it/1000x1000">
+      </div>
+      <div class="col-xs-3 col-md-2" style="padding-top:1em">
+        <img class="img-responsive" src="http://placehold.it/1000x1000">
+      </div>
+      <div class="col-xs-3 col-md-2" style="padding-top:1em">
+        <img class="img-responsive" src="http://placehold.it/1000x1000">
+      </div>
+      <div class="col-xs-3 col-md-2" style="padding-top:1em">
+        <img class="img-responsive" src="http://placehold.it/1000x1000">
+      </div>
+      <div class="col-xs-3 col-md-2" style="padding-top:1em">
+        <img class="img-responsive" src="http://placehold.it/1000x1000">
+      </div>
+
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-xs-12 col-md-12">
+
+      <div class="col-xs-3 col-md-2" style="padding-top:1em">
+        <img class="img-responsive" src="http://placehold.it/1000x1000">
+      </div>
+      <div class="col-xs-3 col-md-2" style="padding-top:1em">
+        <img class="img-responsive" src="http://placehold.it/1000x1000">
+      </div>
+      <div class="col-xs-3 col-md-2" style="padding-top:1em">
+        <img class="img-responsive" src="http://placehold.it/1000x1000">
+      </div>
+      <div class="col-xs-3 col-md-2" style="padding-top:1em">
+        <img class="img-responsive" src="http://placehold.it/1000x1000">
+      </div>
+      <div class="col-xs-3 col-md-2" style="padding-top:1em">
+        <img class="img-responsive" src="http://placehold.it/1000x1000">
+      </div>
+      <div class="col-xs-3 col-md-2" style="padding-top:1em">
+        <img class="img-responsive" src="http://placehold.it/1000x1000">
+      </div>
+
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-xs-12 col-md-12">
+      <p class="btn-more" href="#">MORE</p>
+    </div>
+  </div>
+
+</div>
+
+
 
 <%= link_to 'Back', artists_path %>
