--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -1,26 +1,95 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Artists</h1>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-xs-12 col-md-12">
 
-<% if current_artist %>
-<h1> Welcome to FanLuv! </h1>
-<% end %>
+      <h1>Trending Artists</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+    </div>
+  </div>
+</div>
 
-  <tbody>
-    <% @artists.each do |artist| %>
-      <tr><td><%= artist.name %></td></tr>
-      <tr>
-        <td><%= link_to 'Show', artist %></td>
-    <% end %>
-  </tbody>
-</table>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-xs-12 col-md-12">
+
+        <% @artists.each do |artist| %>
+
+        <div class="col-xs-6 col-md-3">
+
+          <div style="artist-name">
+            <%= link_to artist.name, artist, :class => "artist-name" %>
+          </div>
+
+          <div style="position:relative; z-index:1">
+            <img src="http://placehold.it/250x250">
+          </div>
+
+        </div>
+
+        <% end %>
+
+    </div>
+  </div>
+</div>
+
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-xs-12 col-md-12">
+
+      <h1>Artists Your Friends Like</h1>
+
+    </div>
+  </div>
+</div>
+
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-xs-12 col-md-12">
+
+        <% @artists.each do |artist| %>
+
+        <div class="col-xs-6 col-md-3">
+        <img src="http://placehold.it/250x250">
+        <%= artist.name %>
+        <%= artist.email %>
+        </div>
+
+        <% end %>
+
+    </div>
+  </div>
+</div>
+
+<div class="container-full" style="background-color:#5AADFF">
+  <div class="row">
+    <h2 style="text-align:center;color:white;line-height:100px;">LOVED ARTISTS</h2>
+  </div>
+</div>
+
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-xs-12 col-md-12">
+
+        <% @artists.each do |artist| %>
+
+        <div class="col-xs-6 col-md-3">
+        <img src="http://placehold.it/250x250">
+        <%= artist.name %>
+        <%= artist.email %>
+
+        </div>
+
+        <% end %>
+
+    </div>
+  </div>
+</div>
+
+
+
+
 
 <br>
 
