--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,30 +36,26 @@
       </div>
     </div>
 
-            <%= yield %>
+    <%= yield %>
 
-  <footer>
+    <footer>
 
-    <div class="container-full" style="background-color:#5AFFAD">
-      <div class="container">
-
+      <div class="container-full" style="background-color:#5AFFAD">
         <div class="row">
           <div class="col-xs-6 brand">
-            <a href="#">FAN<i class="fa fa-heart"></i></a>
+            <a class="flfooter" href="#">FAN<i class="fa fa-heart"></i></a>
           </div>
 
           <div class="col-xs-6 social">
-            <p style="text-align:right;"><a href="#">twitter <i class="fa fa-twitter"></i></a></p>
-            <p style="text-align:right;"><a href="#">facebook <i class="fa fa-facebook"></i></a></p>
-            <p style="text-align:right;"><a href="#">instagram <i class="fa fa-instagram"></i></a></p>
+            <p style="text-align:right;margin-right:2em;"><a href="#">twitter <i class="fa fa-twitter"></i></a></p>
+            <p style="text-align:right;margin-right:2em;"><a href="#">facebook <i class="fa fa-facebook"></i></a></p>
+            <p style="text-align:right;margin-right:2em;"><a href="#">instagram <i class="fa fa-instagram"></i></a></p>
           </div>
 
         </div>
-
       </div>
-    </div>
 
-  </footer>
+    </footer>
 
   </body>
 </html>
