--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -81,4 +81,4 @@
 
 <br>
 
-<%= link_to 'New Artist', new_artist_path %>
+<h3>Want to be featured on FanLuv? <%= link_to 'Signup Here!', new_artist_path %>
