--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
     <div class="navbar navbar-default navbar-static-top">
       <div class="container-full">
 
-        <a class="navbar-brand" href="#">FAN<i class="fa fa-heart"></i></a>
+        <a class="navbar-brand" href="/artists">FAN<i class="fa fa-heart"></i></a>
           <ul class="nav navright text-right" style="padding-top:50px;">
 
             <% if current_fan || current_artist %>
@@ -45,7 +45,7 @@
 
         <div class="row">
           <div class="col-xs-6 brand">
-            <a href="#">FAN<i class="fa fa-heart"></i></a>
+            <a href="/artists">FAN<i class="fa fa-heart"></i></a>
           </div>
 
           <div class="col-xs-6 social">
