--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,8 +26,7 @@
             <% if current_fan || current_artist %>
             <li><%= link_to "Log Out", logout_path, method: :delete, class: 'btn' %></li>
             <% else %>
-            <li><%= link_to "Log In", login_path, class: 'btn' %></li>
-            <li><%= link_to "Sign Up", login_path, class: 'btn' %></li>
+            <li><%= link_to "Log In | Sign up", login_path, class: 'btn' %></li>
             <% end %>
 
           </ul>
