--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -47,14 +47,14 @@ h3,
 
 }
 
-.navright li {
-  padding: 10px;
+.navright li a {
+  padding: 15px;
   margin-right: 20px;
-  vertical-align: middle;
+  margin-top: 60px;
   float: right;
   line-height: 20px;
-  color:white;
-  letter-spacing: normal;
+  color: white;
+  letter-spacing: 1px;
 }
 
 .container-full {
