--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
     <%= stylesheet_link_tag    "application" %>
     <%= javascript_include_tag "application", 'data-turbolinks-track' => true %>
     <%= csrf_meta_tags %>
-    <link href='https://fonts.googleapis.com/css?family=Roboto:400,500,700,300' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Roboto:400,500,700,300,100' rel='stylesheet' type='text/css'>
     <%= javascript_include_tag "application" %>
 
   </head>
@@ -21,7 +21,7 @@
       <div class="container-full">
 
         <a class="navbar-brand" href="/artists">FAN<i class="fa fa-heart"></i></a>
-          <ul class="nav navright text-right" style="padding-top:50px;">
+          <ul class="nav navright text-right">
 
             <% if current_fan || current_artist %>
             <li><%= link_to "Log Out", logout_path, method: :delete, class: 'btn' %></li>
