--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -64,13 +64,50 @@
   </div>
 </div>
 
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-xs-12 col-md-4">
+      <div id="map"></div>
+      <script>
+        var map;
+        function initMap() {
+          map = new google.maps.Map(document.getElementById('map'), {
+            center: {lat: 42.361239, lng: -83.06701},
+            zoom: 8
+          });
+        }
+      </script>
+    </div>
+
+    <div class="col-xs-12 col-md-4">
+      <br>
+      <h2>Next tour stop</h2>
+      <br>
+      <h3>April 9, 2016</h3>
+      <h3>Detroit, MI</h3>
+      <h4><a href="http://www.detroitlions.com/ford-field/">Ford Field</a></h4>
+
+      <div class="btn">
+        <a href="#">Find Tickets</a>
+      </div>
+
+    </div>
+
+    <div class="col-xs-12 col-md-4" >
+      <br>
+      <h3>Upcoming Stops</h3>
+    </div>
+
+  </div>
+</div>
+
+
 
 <div class="container-full" style="background-color:#5AADFF;margin-top:1em;">
   <div class="row">
     <h2 style="text-align:center;color:white;line-height:100px;">PRESS</h2>
   </div>
 </div>
-
 
 <div class="container-full" style="background-color:#5AADFF;margin-top:1em;">
   <div class="row">
@@ -137,6 +174,5 @@
 
 </div>
 
-
-
-<%= link_to 'Back', artists_path %>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAJkhQiESw05ouG4NPsr1ByVjBs46KOBLw&callback=initMap"
+async defer></script>
