Added Paperclip Gem

--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -74,4 +74,4 @@
 
 <br>
 
-<h3>Want to be featured on FanLuv? <%= link_to 'Signup Here!', new_artist_path %>
+<h3>Want to be featured on FanLuv? <%= link_to 'Signup Here!', new_artist_path %></h3>
