--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -87,7 +87,7 @@
       <h3>Detroit, MI</h3>
       <h4><a href="http://www.detroitlions.com/ford-field/">Ford Field</a></h4>
 
-      <div class="btn">
+      <div class="btn" style="vertical-align:bottom;">
         <a href="#">Find Tickets</a>
       </div>
 
@@ -96,11 +96,16 @@
     <div class="col-xs-12 col-md-4" >
       <br>
       <h3>Upcoming Stops</h3>
+      <br>
+      <p>April 13, 2016 -- St. Louis, MO</P>
+      <p>April 13, 2016 -- St. Louis, MO</P>
+      <p>April 13, 2016 -- St. Louis, MO</P>
+      <p>April 13, 2016 -- St. Louis, MO</P>
+      <p>April 13, 2016 -- St. Louis, MO</P>
     </div>
 
   </div>
 </div>
-
 
 
 <div class="container-full" style="background-color:#5AADFF;margin-top:1em;">
