--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -163,6 +163,21 @@ h3,
   margin: 10px, 0px;
 }
 
+.btn a {
+  color: white;
+  text-transform: uppercase;
+  font-size: 150%;
+  background-color: #4A4A4A;
+  border-radius: 0;
+  border: none;
+  margin: 10px, 0px;
+}
+
+.btn:hover {
+  color: #333;
+  text-decoration: none;
+}
+
 .btn-more {
   color: white;
   text-transform: uppercase;
@@ -173,7 +188,6 @@ h3,
   margin: 1em 0.75em;
   padding: 20px;
   text-align: center;
-  /*width: 200px;*/
 }
 
 .btn:hover {
