initial attempt at getting 'unluv' working

--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -7,7 +7,9 @@
     </div>
     <div class="col-xs-12 col-md-6">
       <div class="artist-title"><%= @artist.name %>
-        <p><h3><%= render 'luv_form' if current_fan %></h3></p>
+        <p><h3>
+          <%= render 'luv_form' if current_fan %>
+        </h3></p>
       </div>
       <p class="artist-detail">Brunch portland sartorial artisan typewriter. Sustainable cliche ennui ethical. Messenger bag artisan literally gastropub. Fingerstache leggings food truck gastropub pork belly pour-over williamsburg chicharrones authentic. Poutine cornhole affogato, before they sold out umami pabst yuccie ugh cronut selvage. Flexitarian before they sold out chambray locavore tattooed trust fund kogi. 8-bit letterpress retro heirloom chartreuse taxidermy.</p>
 
