added image_url to edit and show views for artists and fans

--- a/app/views/fans/show.html.erb
+++ b/app/views/fans/show.html.erb
@@ -9,6 +9,10 @@
   <strong>Email:</strong>
   <%= @fan.email %>
 </p>
+<p>
+  <strong>Image:</strong>
+  <%= image_tag @fan.image_url %>
+</p>
 
 <% if current_fan == @fan %>
 <td><%= link_to 'Edit', edit_fan_path(@fan) %></td>
