--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -11,7 +11,9 @@
           <%= render 'luv_form' if current_fan %>
         </h3></p>
       </div>
+      <%= image_tag @artist.image_url %>
       <p class="artist-detail">Brunch portland sartorial artisan typewriter. Sustainable cliche ennui ethical. Messenger bag artisan literally gastropub. Fingerstache leggings food truck gastropub pork belly pour-over williamsburg chicharrones authentic. Poutine cornhole affogato, before they sold out umami pabst yuccie ugh cronut selvage. Flexitarian before they sold out chambray locavore tattooed trust fund kogi. 8-bit letterpress retro heirloom chartreuse taxidermy.</p>
+
 
 
       <%= link_to image_tag("http://linkmaker.itunes.apple.com/images/badges/en-us/badge_music-lrg.svg"), ItunesSearchController.search(@artist.name), alt: 'Search artist on Apple Music', margin: 0 %>
