--- a/app/views/fans/edit.html.erb
+++ b/app/views/fans/edit.html.erb
@@ -10,6 +10,10 @@
     <%= f.text_field :email %>
   </p>
   <p>
+    <%= f.label :image_url %>
+    <%= f.text_field :image_url %>
+  </p>
+  <p>
     <%= f.label :password %>
     <%= f.password_field :password %>
   </p>
