--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -48,29 +48,29 @@
   <br>
 </div>
 
-<div class="container-full" style="background-color:#5AADFF">
+<!-- <div class="container-full" style="background-color:#5AADFF">
   <div class="row">
     <h2 style="text-align:center;color:white;line-height:100px;">FRIENDS' LOVED ARTISTS</h2>
   </div>
-</div>
+</div> -->
 
-<div class="container-fluid">
-  <div class="row">
+<!-- <div class="container-fluid">
+  <div class="row"> -->
 
-      <% @artists.each do |artist| %>
+      <%# @artists.each do |artist| %>
 
-      <div class="col-xs-6 col-md-3">
-        <%= link_to artist.name, artist, :class => "artist-name" %>
-        <div style="position:relative; z-index:1">
+      <!-- <div class="col-xs-6 col-md-3"> -->
+        <%#= link_to artist.name, artist, :class => "artist-name" %>
+        <!-- <div style="position:relative; z-index:1">
           <img src="http://placehold.it/250x250">
         </div>
-      </div>
+      </div> -->
 
-      <% end %>
+      <%# end %>
 
-  </div>
+  <!-- </div>
   <br>
-</div>
+</div> -->
 
 <br>
 
