--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,7 +44,7 @@
             <a class="brand" href="/">FAN<i class="fa fa-heart"></i></a>
           </div>
 
-          <div class="col-md-4 col-xs-12 text-center">
+          <div class="col-md-4 col-xs-12 footer-mid">
             <%= link_to 'Register as an Artist', new_artist_path %>
           </div>
 
