--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -85,7 +85,7 @@
 
     <div class="col-xs-12 col-md-4">
       <br>
-      <h2>Next tour stop</h2>
+      <h2>Next Stop</h2>
       <br>
       <h3>April 9, 2016</h3>
       <h3>Detroit, MI</h3>
@@ -101,11 +101,17 @@
       <br>
       <h3>Upcoming Stops</h3>
       <br>
-      <p>April 13, 2016 -- St. Louis, MO</P>
-      <p>April 13, 2016 -- St. Louis, MO</P>
-      <p>April 13, 2016 -- St. Louis, MO</P>
-      <p>April 13, 2016 -- St. Louis, MO</P>
-      <p>April 13, 2016 -- St. Louis, MO</P>
+      <p>March 26, 2016 / / Dubai, United Arab Emerates</P>
+        <p class="venue">Barclaycard Arena | Find Tickets</p>
+      <p>March 30, 2016 / / Birmingham, United Kingdom</P>
+        <p class="venue">Barclaycard Arena | Find Tickets</p>
+      <p>March 31, 2016 / / London, United Kingdom</P>
+        <p class="venue">The O2 | Find Tickets</p>
+      <p>April 2, 2016 / / Dublin, Ireland</P>
+        <p class="venue">3Arena | Find Tickets</p>
+      <p>April 4, 2016 / / Glasgow, United Kingdom</P>
+        <p class="venue">The SSE Hydro | Find Tickets</p>
+
     </div>
 
   </div>
