--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -3,7 +3,7 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-xs-12 col-md-6">
-      <img class="img-responsive" src="http://placehold.it/1000x1000">
+      <%= image_tag @artist.image_url, :class => "img-responsive" %>
     </div>
     <div class="col-xs-12 col-md-6">
       <div class="artist-title"><%= @artist.name %>
@@ -11,7 +11,6 @@
           <%= render 'luv_form' if current_fan %>
         </h3></p>
       </div>
-      <%= image_tag @artist.image_url %>
       <p class="artist-detail">Brunch portland sartorial artisan typewriter. Sustainable cliche ennui ethical. Messenger bag artisan literally gastropub. Fingerstache leggings food truck gastropub pork belly pour-over williamsburg chicharrones authentic. Poutine cornhole affogato, before they sold out umami pabst yuccie ugh cronut selvage. Flexitarian before they sold out chambray locavore tattooed trust fund kogi. 8-bit letterpress retro heirloom chartreuse taxidermy.</p>
 
 
@@ -91,8 +90,8 @@
       <h3>Detroit, MI</h3>
       <h4><a href="http://www.detroitlions.com/ford-field/">Ford Field</a></h4>
 
-      <div class="btn" style="vertical-align:bottom;">
-        <a href="#">Find Tickets</a>
+      <div class="btn">
+        <p>Find Tickets</a>
       </div>
 
     </div>
@@ -113,10 +112,8 @@
         <p class="venue">The SSE Hydro | Find Tickets</p>
 
     </div>
-
   </div>
 </div>
-
 
 <div class="container-full" style="background-color:#5AADFF;margin-top:1em;">
   <div class="row">
