--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -28,6 +28,12 @@ h3,
   line-height: 1.5;
 }
 
+h4 a:hover {
+  text-decoration: none;
+  color: black;
+  background-color:inherit;
+}
+
 .navbar {
   background-color: #FF5A5A;
   color: white;
@@ -173,11 +179,23 @@ h3,
   color: white;
 }
 
-/*.btn a:hover {
-  background-color: gainsboro;
+.btn a:hover {
+  background-color: #eee;
   color: black;
   text-decoration: none;
-}*/
+}
+
+.btn.ticket-btn {
+  color: white;
+  background-color: #4A4A4A;
+}
+
+.btn.ticket-btn:hover {
+  background-color: #eee;
+  color: black;
+  text-decoration: none;
+}
+
 
 .btn-more {
   color: white;
