--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -133,6 +133,10 @@ h4 a:hover {
   line-height: 1.1em;
 }
 
+a.artist-name:hover {
+  text-decoration: none;
+}
+
 .artist-title {
   text-transform: uppercase;
   font-size: 300%;
@@ -151,6 +155,12 @@ h4 a:hover {
 .img-responsive {
   display: block;
   max-width: 100%;
+  height: auto;
+}
+
+.img-250 {
+  display: block;
+  max-width: 250px;
   height: auto;
 }
 
