--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -15,7 +15,7 @@
 
       <div class="col-xs-6 col-md-3">
         <%= link_to artist.name, artist, :class => "artist-name" %>
-        <img src="http://placehold.it/250x250">
+        <%= image_tag artist.image_url, :class => "img-250" %>
       </div>
 
       <% end %>
@@ -38,7 +38,7 @@
       <div class="col-xs-6 col-md-3">
         <%= link_to artist.name, artist, :class => "artist-name" %>
         <div style="position:relative; z-index:1">
-          <img src="http://placehold.it/250x250">
+          <%= image_tag artist.image_url, :class => "img-250" %>
         </div>
       </div>
 
