Hard coded album covers on artist detail page

--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -35,16 +35,16 @@
     <div class="col-xs-12 col-md-12">
 
         <div class="col-xs-6 col-md-3" style="padding-top:1em">
-          <img class="img-responsive" src="http://placehold.it/1000x1000">
+          <img class="img-responsive" src="https://dl.dropboxusercontent.com/u/1515/fanluv/albums/rihanna_anti.jpg">
         </div>
         <div class="col-xs-6 col-md-3" style="padding-top:1em">
-          <img class="img-responsive" src="http://placehold.it/1000x1000">
+        <img class="img-responsive" src="https://dl.dropboxusercontent.com/u/1515/fanluv/albums/rihanna_unapologetic.jpg">
         </div>
         <div class="col-xs-6 col-md-3" style="padding-top:1em">
-          <img class="img-responsive" src="http://placehold.it/1000x1000">
+          <img class="img-responsive" src="https://dl.dropboxusercontent.com/u/1515/fanluv/albums/rihanna_loud.jpg">
         </div>
         <div class="col-xs-6 col-md-3" style="padding-top:1em">
-          <img class="img-responsive" src="http://placehold.it/1000x1000">
+          <img class="img-responsive" src="https://dl.dropboxusercontent.com/u/1515/fanluv/albums/rihanna_rated_r.jpg">
         </div>
 
     </div>
