--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -81,30 +81,30 @@
 
     <div class="col-xs-12 col-md-4">
       <br>
-      <h2>Next Stop</h2>
-      <br>
-      <h3>April 9, 2016</h3>
-      <h3>Detroit, MI</h3>
-      <h4><a href="http://www.detroitlions.com/ford-field/">Ford Field</a></h4>
+      <h3>Next Stop</h3>
+      <hr>
+      <h4>April 9, 2016 / / Detroit, MI</h4>
 
-      <a class="btn ticket-btn" href="#">Find Tickets</a>
+      <p><a href="http://www.detroitlions.com/ford-field/">Ford Field</a></p>
+
+      <a class="btn ticket-btn" href="http://www.ticketmaster.com/rihanna-anti-world-tour-2016-miami-florida-03-15-2016/event/0D004F74E49DBB97?ac_link=tmplus_merch_sitespotlight_LSC_GTVopp&pageType=home&spotlight=1%7C1317303&spotlight_ren_od=1&tm_link=tm_homeA_4_f1">Find Tickets</a>
 
     </div>
 
     <div class="col-xs-12 col-md-4" >
       <br>
       <h3>Upcoming Stops</h3>
-      <br>
+      <hr>
       <p>March 26, 2016 / / Dubai, United Arab Emerates</P>
-        <p class="venue">Barclaycard Arena | Find Tickets</p>
+        <p class="venue">Barclaycard Arena | <a href="http://www.ticketmaster.com/rihanna-anti-world-tour-2016-miami-florida-03-15-2016/event/0D004F74E49DBB97?ac_link=tmplus_merch_sitespotlight_LSC_GTVopp&pageType=home&spotlight=1%7C1317303&spotlight_ren_od=1&tm_link=tm_homeA_4_f1">Find Tickets</a></p>
       <p>March 30, 2016 / / Birmingham, United Kingdom</P>
-        <p class="venue">Barclaycard Arena | Find Tickets</p>
+        <p class="venue">Barclaycard Arena | <a href="http://www.ticketmaster.com/rihanna-anti-world-tour-2016-miami-florida-03-15-2016/event/0D004F74E49DBB97?ac_link=tmplus_merch_sitespotlight_LSC_GTVopp&pageType=home&spotlight=1%7C1317303&spotlight_ren_od=1&tm_link=tm_homeA_4_f1">Find Tickets</a></p>
       <p>March 31, 2016 / / London, United Kingdom</P>
-        <p class="venue">The O2 | Find Tickets</p>
+        <p class="venue">The O2 | <a href="http://www.ticketmaster.com/rihanna-anti-world-tour-2016-miami-florida-03-15-2016/event/0D004F74E49DBB97?ac_link=tmplus_merch_sitespotlight_LSC_GTVopp&pageType=home&spotlight=1%7C1317303&spotlight_ren_od=1&tm_link=tm_homeA_4_f1">Find Tickets</a></p>
       <p>April 2, 2016 / / Dublin, Ireland</P>
-        <p class="venue">3Arena | Find Tickets</p>
+        <p class="venue">3Arena | <a href="http://www.ticketmaster.com/rihanna-anti-world-tour-2016-miami-florida-03-15-2016/event/0D004F74E49DBB97?ac_link=tmplus_merch_sitespotlight_LSC_GTVopp&pageType=home&spotlight=1%7C1317303&spotlight_ren_od=1&tm_link=tm_homeA_4_f1">Find Tickets</a></p>
       <p>April 4, 2016 / / Glasgow, United Kingdom</P>
-        <p class="venue">The SSE Hydro | Find Tickets</p>
+        <p class="venue">The SSE Hydro | <a href="http://www.ticketmaster.com/rihanna-anti-world-tour-2016-miami-florida-03-15-2016/event/0D004F74E49DBB97?ac_link=tmplus_merch_sitespotlight_LSC_GTVopp&pageType=home&spotlight=1%7C1317303&spotlight_ren_od=1&tm_link=tm_homeA_4_f1">Find Tickets</a></p>
 
     </div>
   </div>
