--- a/app/views/artists/edit.html.erb
+++ b/app/views/artists/edit.html.erb
@@ -14,6 +14,10 @@
     <%= f.text_field :image_url %>
   </p>
   <p>
+    <%= f.label :description %>
+    <%= f.text_field :description %>
+  </p>
+  <p>
     <%= f.label :password %>
     <%= f.password_field :password %>
   </p>
