--- a/app/views/artists/new.html.erb
+++ b/app/views/artists/new.html.erb
@@ -26,6 +26,24 @@
 
           <div class="form-group">
             <div class="col-xs-4 control-label">
+              <%= f.label :description %>
+            </div>
+            <div class="col-xs-8" style="margin-bottom:1em;">
+              <%= f.text_field :description, :class => "form-control" %>
+            </div>
+          </div>
+
+          <div class="form-group">
+            <div class="col-xs-4 control-label">
+              <%= f.label :image_url %>
+            </div>
+            <div class="col-xs-8" style="margin-bottom:1em;">
+              <%= f.text_field :image_url, :class => "form-control" %>
+            </div>
+          </div>
+
+          <div class="form-group">
+            <div class="col-xs-4 control-label">
               <%= f.label :password %>
             </div>
             <div class="col-xs-8" style="margin-bottom:1em;">
