--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -3,17 +3,15 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-xs-12 col-md-6">
-      <img class="img-responsive" src="http://placehold.it/1000x1000">
+      <img class="img-responsive"><%= @artist.image_url %>
     </div>
     <div class="col-xs-12 col-md-6">
       <div class="artist-title"><%= @artist.name %>
-        <p><h3>
-          <%= render 'luv_form' if current_fan %>
-        </h3></p>
-      </div>
-      <%= image_tag @artist.image_url %>
-      <p class="artist-detail">Brunch portland sartorial artisan typewriter. Sustainable cliche ennui ethical. Messenger bag artisan literally gastropub. Fingerstache leggings food truck gastropub pork belly pour-over williamsburg chicharrones authentic. Poutine cornhole affogato, before they sold out umami pabst yuccie ugh cronut selvage. Flexitarian before they sold out chambray locavore tattooed trust fund kogi. 8-bit letterpress retro heirloom chartreuse taxidermy.</p>
 
+        <p><h3><%= render 'luv_form' if current_fan %></h3></p>
+
+      </div>
+      <p class="artist-detail"><%= @artist.description %></p>
 
 
       <%= link_to image_tag("http://linkmaker.itunes.apple.com/images/badges/en-us/badge_music-lrg.svg"), ItunesSearchController.search(@artist.name), alt: 'Search artist on Apple Music', margin: 0 %>
