Moved in-line styles to style sheet

--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -26,9 +26,9 @@
   </div>
 </div>
 
-<div class="container-full" style="background-color:#5AADFF;margin-top:1em;">
+<div class="container-full subhead">
   <div class="row">
-    <h2 style="text-align:center;color:white;line-height:100px;">ALBUMS</h2>
+    <h2>ALBUMS</h2>
   </div>
 </div>
 
