Updated styling on artist signup and artist show pages

--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -24,9 +24,9 @@
   <br>
 </div>
 
-<div class="container-full" style="background-color:#5AADFF">
+<div class="container-full subhead">
   <div class="row">
-    <h2 style="text-align:center;color:white;line-height:100px;">LOVED ARTISTS</h2>
+    <h2>LOVED ARTISTS</h2>
   </div>
 </div>
 
