--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -60,9 +60,9 @@
 </div>
 
 
-<div class="container-full" style="background-color:#5AADFF;margin-top:1em;">
+<div class="container-full subhead">
   <div class="row">
-    <h2 style="text-align:center;color:white;line-height:100px;">TOUR DATES</h2>
+    <h2>TOUR DATES</h2>
   </div>
 </div>
 
@@ -112,15 +112,15 @@
   </div>
 </div>
 
-<div class="container-full" style="background-color:#5AADFF;margin-top:1em;">
+<div class="container-full subhead">
   <div class="row">
-    <h2 style="text-align:center;color:white;line-height:100px;">PRESS</h2>
+    <h2>PRESS</h2>
   </div>
 </div>
 
-<div class="container-full" style="background-color:#5AADFF;margin-top:1em;">
+<div class="container-full subhead">
   <div class="row">
-    <h2 style="text-align:center;color:white;line-height:100px;">FANS</h2>
+    <h2>FANS</h2>
   </div>
 </div>
 
