--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -76,13 +76,13 @@ p a:hover {
   color: white;
 }
 
-.container-full subhead {
-  margin: 0 auto;
+.container-full.subhead {
+  margin-top: 1em;
   width: 100%;
   color: white;
-  padding: 0.5em;
+  padding: 1em;
   background-color: #5AADFF;
-  /*line-height: 100px;*/
+  text-align: center;
 }
 
 .brand {
@@ -213,6 +213,12 @@ p.venue a {
   text-decoration: none;
 }
 
+input.btn:hover {
+  background-color: #eee;
+  color: black;
+  text-decoration: none;
+}
+
 .btn.ticket-btn {
   color: white;
   background-color: #4A4A4A;
@@ -235,12 +241,6 @@ p.venue a {
   margin: 1em 0.75em;
   padding: 20px;
   text-align: center;
-}
-
-.form-horizontal .control-label {
-  padding-top: 7px;
-  margin-bottom: 0;
-  text-align: right;
 }
 
 .calbox {
