--- a/app/views/artists/edit.html.erb
+++ b/app/views/artists/edit.html.erb
@@ -1,33 +1,80 @@
-<h1>Editing Artist</h1>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-xs-12 col-md-6 col-md-offset-3 text-center">
+      <h1>Editing Artist</h1>
+      <hr>
+    </div>
 
-<%= form_for @artist do |f| %>
-  <p>
-    <%= f.label :name %>
-    <%= f.text_field :name %>
-  </p>
-  <p>
-    <%= f.label :email %>
-    <%= f.text_field :email %>
-  </p>
-  <p>
-    <%= f.label :image_url %>
-    <%= f.text_field :image_url %>
-  </p>
-  <p>
-    <%= f.label :description %>
-    <%= f.text_field :description %>
-  </p>
-  <p>
-    <%= f.label :password %>
-    <%= f.password_field :password %>
-  </p>
-  <p>
-    <%= f.label :password_confirmation %>
-    <%= f.password_field :password_confirmation %>
-  </p>
-  <p>
-    <%= f.submit %>
-  </p>
+    <div class="col-xs-12 col-md-6 col-md-offset-3">
+
+      <%= form_for @artist do |f| %>
+
+    <div class="form-group">
+      <div class="col-xs-4 control-label">
+        <%= f.label :name %>
+      </div>
+      <div class="col-xs-8" style="margin-bottom:1em;">
+        <%= f.text_field :name, :class => "form-control" %>
+      </div>
+    </div>
+
+
+    <div class="form-group">
+      <div class="col-xs-4 control-label">
+        <%= f.label :email %>
+      </div>
+      <div class="col-xs-8" style="margin-bottom:1em;">
+        <%= f.text_field :email, :class => "form-control" %>
+      </div>
+    </div>
+
+
+    <div class="form-group">
+      <div class="col-xs-4 control-label">
+        <%= f.label :description %>
+      </div>
+      <div class="col-xs-8" style="margin-bottom:1em;">
+        <%= f.text_field :description, :class => "form-control", :style => "height: 200px" %>
+      </div>
+    </div>
+
+
+    <div class="form-group">
+      <div class="col-xs-4 control-label">
+        <%= f.label :image_url %>
+      </div>
+      <div class="col-xs-8" style="margin-bottom:1em;">
+        <%= f.text_field :image_url, :class => "form-control" %>
+      </div>
+    </div>
+
+
+    <div class="form-group">
+      <div class="col-xs-4 control-label">
+        <%= f.label :password %>
+      </div>
+      <div class="col-xs-8" style="margin-bottom:1em;">
+        <%= f.password_field :password, :class => "form-control" %>
+      </div>
+    </div>
+
+
+    <div class="form-group">
+      <div class="col-xs-4 control-label">
+        <%= f.label :password_confirmation %>
+      </div>
+      <div class="col-xs-8" style="margin-bottom:1em;">
+        <%= f.password_field :password_confirmation, :class => "form-control" %>
+      </div>
+    </div>
+
+
+    <div class="text-right" style="margin:1em;">
+      <%= f.submit "Update my account", class: "btn" %>
+    </div>
+
 <% end %>
 
-<%= link_to 'Back', artists_path %>
+</div>
+</div>
+</div>
