--- a/app/views/fans/edit.html.erb
+++ b/app/views/fans/edit.html.erb
@@ -1,29 +1,65 @@
-<h1>Editing Fan</h1>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-xs-12 col-md-6 col-md-offset-3 text-center">
+      <h1>Editing Fan</h1>
+      <hr>
+    </div>
 
-<%= form_for @fan do |f| %>
-  <p>
-    <%= f.label :name %>
-    <%= f.text_field :name %>
-  </p>
-  <p>
-    <%= f.label :email %>
-    <%= f.text_field :email %>
-  </p>
-  <p>
-    <%= f.label :image_url %>
-    <%= f.text_field :image_url %>
-  </p>
-  <p>
-    <%= f.label :password %>
-    <%= f.password_field :password %>
-  </p>
-  <p>
-    <%= f.label :password_confirmation %>
-    <%= f.password_field :password_confirmation %>
-  </p>
-  <p>
-    <%= f.submit %>
-  </p>
+    <div class="col-xs-12 col-md-6 col-md-offset-3">
+
+      <%= form_for @fan do |f| %>
+
+      <div class="form-group">
+        <div class="col-xs-4 control-label">
+          <%= f.label :name %>
+        </div>
+        <div class="col-xs-8" style="margin-bottom:1em;">
+          <%= f.text_field :name, :class => "form-control" %>
+        </div>
+      </div>
+
+      <div class="form-group">
+        <div class="col-xs-4 control-label">
+          <%= f.label :email %>
+        </div>
+        <div class="col-xs-8" style="margin-bottom:1em;">
+          <%= f.text_field :email, :class => "form-control" %>
+        </div>
+      </div>
+
+      <div class="form-group">
+        <div class="col-xs-4 control-label">
+          <%= f.label :image_url %>
+        </div>
+        <div class="col-xs-8" style="margin-bottom:1em;">
+          <%= f.text_field :image_url, :class => "form-control" %>
+        </div>
+      </div>
+
+      <div class="form-group">
+        <div class="col-xs-4 control-label">
+          <%= f.label :password %>
+        </div>
+        <div class="col-xs-8" style="margin-bottom:1em;">
+          <%= f.password_field :password, :class => "form-control" %>
+        </div>
+      </div>
+
+      <div class="form-group">
+        <div class="col-xs-4 control-label">
+          <%= f.label :password_confirmation %>
+        </div>
+        <div class="col-xs-8" style="margin-bottom:1em;">
+          <%= f.password_field :password_confirmation, :class => "form-control" %>
+        </div>
+      </div>
+
+      <div class="text-right" style="margin:1em;">
+        <%= f.submit "Update my account", class: "btn" %>
+      </div>
+
 <% end %>
 
-<%= link_to 'Back', fans_path %>
+</div>
+</div>
+</div>
