--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -109,6 +109,7 @@ p a:hover {
   font-size: 100%;
   letter-spacing: 4px;
   vertical-align: middle;
+  margin-top: 1em;
 }
 
 .social {
@@ -229,7 +230,6 @@ input.btn:hover {
   color: black;
   text-decoration: none;
 }
-
 
 .btn-more {
   color: white;
