--- a/app/views/fans/show.html.erb
+++ b/app/views/fans/show.html.erb
@@ -1,22 +1,51 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Name:</strong>
-  <%= @fan.name %>
-</p>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-xs-12 col-md-6">
+      <%= image_tag @fan.image_url, :class => "img-responsive", :style => "margin-bottom:1em;" %>
+    </div>
 
-<p>
-  <strong>Email:</strong>
-  <%= @fan.email %>
-</p>
-<p>
-  <strong>Image:</strong>
-  <%= image_tag @fan.image_url %>
-</p>
+    <div class="col-xs-12 col-md-6">
+      <div class="artist-title">
+        <%= @fan.name %>
+      </div>
+      <h3>Liked Artists</h3>
+    </div>
+
+
+    <% @artists.each do |artist| %>
+
+    <div class="col-xs-4 col-md-3">
+      <%= link_to artist.name, artist, :class => "artist-name" %>
+      <div style="position:relative; z-index:1">
+        <%= image_tag artist.image_url, :class => "img-250" %>
+      </div>
+    </div>
+
+    <% end %>
+
+
+    <!-- <div class="col-xs-4 col-md-3" style="padding-top:1em">
+      <img class="img-responsive" src="http://placehold.it/1000x1000">
+    </div>
+    <div class="col-xs-4 col-md-3" style="padding-top:1em">
+      <img class="img-responsive" src="http://placehold.it/1000x1000">
+    </div>
+    <div class="col-xs-4 col-md-3" style="padding-top:1em">
+      <img class="img-responsive" src="http://placehold.it/1000x1000">
+    </div>
+    <div class="col-xs-4 col-md-3" style="padding-top:1em">
+      <img class="img-responsive" src="http://placehold.it/1000x1000">
+    </div> -->
+
+  </div>
+</div>
+
+
 
 <% if current_fan == @fan %>
-<td><%= link_to 'Edit', edit_fan_path(@fan) %></td>
-<td><%= link_to 'Delete', @fan, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-<% end %>
+<%= link_to 'Edit', edit_fan_path(@fan) %>
+<%= link_to 'Delete', @fan, method: :delete, data: { confirm: 'Are you sure?' } %>
 
-<%= link_to 'Back', fans_path %>
+<% end %>
