Fixed text area bug

--- a/app/views/artists/edit.html.erb
+++ b/app/views/artists/edit.html.erb
@@ -34,7 +34,7 @@
         <%= f.label :description %>
       </div>
       <div class="col-xs-8" style="margin-bottom:1em;">
-        <%= f.text_field :description, :class => "form-control", :style => "height: 200px" %>
+        <%= f.text_area :description, :class => "form-control", :style => "height: 200px" %>
       </div>
     </div>
 
