--- a/app/views/artists/new.html.erb
+++ b/app/views/artists/new.html.erb
@@ -7,7 +7,7 @@
 
     <div class="col-xs-12 col-md-6 col-md-offset-3">
       <%= form_for @artist do |f| %>
-      
+
         <div class="form-group">
           <div class="col-xs-4 control-label">
             <%= f.label :name %>
@@ -31,7 +31,7 @@
             <%= f.label :description %>
           </div>
           <div class="col-xs-8" style="margin-bottom:1em;">
-            <%= f.text_field :description, :class => "form-control", :style => "height: 200px" %>
+            <%= f.text_area :description, :class => "form-control", :style => "height: 200px" %>
           </div>
         </div>
 
