--- a/app/views/fans/index.html.erb
+++ b/app/views/fans/index.html.erb
@@ -1,26 +1,32 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Fans</h1>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-xs-12 col-md-12 text-center">
+      <h2>Fans</h2>
+    </div>
+  </div>
+</div>
 
 <% if current_fan %>
-<h1> Welcome to FanLuv! </h1>
+<!-- <h1> Welcome to FanLuv! </h1> -->
 <% end %>
 
-<table>
-  <thead>
-    <tr>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<div class="container-fluid">
+  <div class="row">
 
-  <tbody>
     <% @fans.each do |fan| %>
-      <tr><td><%=fan.name%></td></tr>
-      <tr>
-        <td><%= link_to 'Show', fan %></td>
+
+      <div class="col-xs-4 col-md-2">
+
+      <%= link_to image_tag(fan.image_url, :class => "img-250"), fan  %>
+
     <% end %>
-  </tbody>
-</table>
+
+      </div>
+      <br>
+  </div>
+</div>
 
 <br>
 
