--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -114,6 +114,40 @@
 
 <div class="container-full subhead">
   <div class="row">
+    <h2>MERCH</h2>
+  </div>
+</div>
+
+<div class="container-full merch">
+  <div class="row">
+    <div class="col-xs-6 col-md-12">
+      <p>Filter by: <a href="#">Albums</a> | <a href="#">Wearables</a> | <a href="#">Memorabilia</a></p>
+    </div>
+
+    <div class="col-xs-6 col-md-3" style="padding-top:1em">
+      <img class="img-responsive" src="https://dl.dropboxusercontent.com/u/1515/fanluv/merch/tshirt1.jpg">
+    </div>
+    <div class="col-xs-6 col-md-3" style="padding-top:1em">
+      <img class="img-responsive" src="https://dl.dropboxusercontent.com/u/1515/fanluv/merch/tshirt2.jpg">
+    </div>
+    <div class="col-xs-6 col-md-3" style="padding-top:1em">
+      <img class="img-responsive" src="https://dl.dropboxusercontent.com/u/1515/fanluv/merch/tshirt3.jpg">
+    </div>
+    <div class="col-xs-6 col-md-3" style="padding-top:1em">
+      <img class="img-responsive" src="https://dl.dropboxusercontent.com/u/1515/fanluv/merch/tshirt4.jpg">
+    </div>
+
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-xs-12 col-md-12">
+    <p class="btn-more" href="#">MORE</p>
+  </div>
+</div>
+
+<div class="container-full subhead">
+  <div class="row">
     <h2>PRESS</h2>
   </div>
 </div>
