--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -118,7 +118,7 @@
   </div>
 </div>
 
-<div class="container-full merch">
+<div class="container-fluid merch">
   <div class="row">
     <div class="col-xs-6 col-md-12">
       <p>Filter by: <a href="#">Albums</a> | <a href="#">Wearables</a> | <a href="#">Memorabilia</a></p>
@@ -148,9 +148,54 @@
 
 <div class="container-full subhead">
   <div class="row">
-    <h2>PRESS</h2>
+    <h2>NEWS</h2>
   </div>
 </div>
+
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-xs-6 col-md-3">
+      <div class="note">
+
+        <h4>Madonna on Social Media – All the pictures and videos!</h4>
+        <p>Here's an overview of all the pictures and videos that have been posted on Madonna's official Instagram account and other social media. 10 March 2016 Clown Squad #tearsofaclown This Clown ... </p>
+        <p><a class="note_rm" href="#">Read more <i class="fa fa-lg fa-arrow-right"></i></a></p>
+
+      </div>
+    </div>
+
+    <div class="col-xs-6 col-md-3">
+      <div class="note">
+
+        <h4>Madonna Mania is about to hit Melbourne on Friday March 11th</h4>
+        <p>Just Like A Prayer, Chapel Off Chapel will take you there… to celebrate the Queen of Pop’s arrival in Melbourne after 23 years with a pre-show party and everybody is invited!</p>
+        <p><a class="note_rm" href="#">Read more <i class="fa fa-lg fa-arrow-right"></i></a></p>
+
+      </div>
+    </div>
+
+    <div class="col-xs-6 col-md-3">
+      <div class="note">
+
+        <h4>Possible song choice for the unique MADONNA: TEARS OF A CLOWN fan show</h4>
+        <p>The unique fan show MADONNA: TEARS OF A CLOWN will fuse music, art and comedy tomorrow at Melbourne’s historic Forum Theatre! Madonna and her crew have been rehearsing for the past two days and here are some of the songs that were overheard by fans outside the venue…</p>
+        <p><a class="note_rm" href="#">Read more <i class="fa fa-lg fa-arrow-right"></i></a></p>
+
+      </div>
+    </div>
+
+    <div class="col-xs-6 col-md-3">
+      <div class="note">
+
+        <h4>Japanese MDNA Skin interview with Madonna about the secret of beauty</h4>
+        <p>BS Fuiji’s ANSWERS showed a new Madonna interview for the promotion of her skincare line, MDNA Skin, where Madonna talked about the creative process behind MDNA Skin and the secret of beauty!</p>
+        <p><a class="note_rm" href="#">Read more <i class="fa fa-lg fa-arrow-right"></i></a></p>
+
+      </div>
+    </div>
+  </div>
+</div>
+
 
 <div class="container-full subhead">
   <div class="row">
