--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -15,7 +15,7 @@
 
       <div class="col-xs-6 col-md-3">
         <%= link_to artist.name, artist, :class => "artist-name" %>
-        <%= image_tag artist.image_url, :class => "img-250" %>
+        <%= link_to image_tag(artist.image_url, :class => "img-250"), artist  %>
       </div>
 
       <% end %>
