--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -136,20 +136,33 @@ p a:hover {
   background-color: inherit;
 }
 
+.force-to-bottom {
+  position:absolute;
+  bottom: 0;
+  width: 100%;
+  margin-left: -0.6em;
+}
+
 .artist-name {
-  z-index:2;
-  position:relative;
-  top:250px;
-  left:0px;
   text-transform: uppercase;
   font-size: 200%;
-  background-color: gainsboro;
+  background-color: rgba(68, 67, 100, 0.5);
   text-align: center;
   display: inline-block;
-  width: 250px;
+  width: 100%;
   height: 75px;
-  padding: 0.25em;
   line-height: 1.1em;
+  padding: 0.25em;
+}
+
+.artist-container {
+  height: 250px;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+a.artist-name {
+  color: white;
 }
 
 a.artist-name:hover {
@@ -169,6 +182,7 @@ a.artist-name:hover {
   font-weight: 100;
   line-height: 1.25em;
   padding-bottom: 1em;
+  color: white;
 }
 
 .img-responsive {
